--- a/the-code.html
+++ b/the-code.html
@@ -21,7 +21,7 @@
             </div>
             <div class="the-top-content">
                 <div class="welcome">
-                    So... <br>Welcome to Hwa Chong's 2025 Open House!!
+                    So... <br>Welcome to Hwa Chong's 2025 CCA Fair!!!!
                     <div class="interactive">
                       <button id="yay-button">YAY</button>
                       <p id="count">x0</p>
